--- a/blog-backend/src/main/resources/application-dev.properties
+++ b/blog-backend/src/main/resources/application-dev.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/catalogs
+spring.datasource.url=jdbc:postgresql://localhost:5432/myblog
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
