--- a/blog-backend/src/main/resources/application.properties
+++ b/blog-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=${APP_PROFILE:dev}
 
 spring.jpa.open-in-view=false
 
@@ -8,3 +8,7 @@ security.oauth2.client.client-secret=${CLIENT_SECRET:myclientsecret}
 
 jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
 jwt.duration=${JWT_DURATION:86400}
+
+spring.sendgrid.api-key=${SENDGRID_API_KEY}
+
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
